cabal-version:      3.0
name:               haskell-playground
version:            0.1.0.0
synopsis:           Playground with unusual settings and experimental features
-- description:
license:            MIT
license-file:       LICENSE
author:             Alejandro Domínguez
maintainer:         adomu4@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall -Werror=incomplete-patterns

executable haskell-playground
    import:             warnings
    main-is:            Main.hs
    -- other-modules:
    other-extensions:   ImpredicativeTypes
                      , QuasiQuotes
    -- linear-base contains base, containers and text
    build-depends:      base >= 4.20 && < 4.21
                      , containers >= 0.7 && < 0.8
                      , fgl >= 5.8.3 && < 5.9
                      , text >= 2.1.1 && < 2.2
                      , bytestring >= 0.12.1 && < 0.13
                      , flow >= 2.0.0 && < 2.1
                      , linear-base >= 0.4.0 && < 0.5
                      , comonad >= 5.0.9 && < 5.1
                      , profunctors >= 5.6.2 && < 5.7
                      , optics >= 0.4.2 && < 0.5
                      , named >= 0.3.0 && < 0.4
                      , effectful >= 2.5.1 && < 2.6
                      , parsec >= 3.1.17 && < 3.2
                      , req >= 3.13.4 && < 3.14
                      , beam-core >= 0.10.3 && < 0.11
                      , beam-sqlite >= 0.5.3 && < 0.6
                      , servant >= 0.20.2 && < 0.21
                      , htmx-servant >= 0.2.0 && < 0.3
                      , servant-client >= 0.20.2 && < 0.21
                      , aeson >= 2.2.3 && < 2.3
                      , lucid2 >= 0.0.20240424 && < 0.1
                      , htmx-lucid >= 0.2.0 && < 0.3
    mixins:             base hiding (Prelude)
                      , linear-base (Prelude.Linear as Prelude)
    hs-source-dirs:     app
    default-language:   GHC2024
-- OrPatterns and MultilineStrings, while interesting, require GHC >= 9.12
    default-extensions: ApplicativeDo
                      , Arrows
                      , OverloadedStrings
                      , OverloadedLists
                      , ParallelListComp
                      , TransformListComp
                      , MonadComprehensions
                      , OverloadedRecordDot
                      , DuplicateRecordFields
                      , RecordWildCards
                      , BlockArguments
                      , PatternSynonyms
                      , LexicalNegation
                      , MultiWayIf
                      , NumDecimals
                      , PackageImports
                      , UnboxedTuples
                      , UnliftedNewtypes
                      , UnliftedDatatypes
                      , LinearTypes
                      , FunctionalDependencies
