cabal-version:      3.0
name:               haskell-playground
version:            0.1.0.0
synopsis:           Playground with unusual settings and experimental features
-- description:
license:            MIT
license-file:       LICENSE
author:             Alejandro Domínguez
maintainer:         adomu4@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall -Werror
executable haskell-playground
    import:             warnings
    main-is:            Main.hs
    -- other-modules:
    other-extensions:   ImpredicativeTypes
                      , QuasiQuotes
    -- linear-base contains base, containers and text
    build-depends:      base >= 4.21 && < 4.22
                      , named >= 0.3.0 && < 0.4
                      , profunctors >= 5.6.2 && < 5.7
                      , comonad >= 5.0.9 && < 5.1
                      , lens >= 5.3.4 && < 5.4
-- profunctors, comonad and lens required containers-0.7
                      , containers >= 0.7 && < 0.8
                      , fgl >= 5.8.3 && < 5.9
                      , text >= 2.1.2 && < 2.2
                      , bytestring >= 0.12.2 && < 0.13
                      , parsec >= 3.1.18 && < 3.2
                      , QuickCheck >= 2.15.0 && < 2.16
                      , heftia >= 0.7.0 && < 0.8
    hs-source-dirs:     app
    default-language:   GHC2024
    default-extensions: ApplicativeDo
                      , Arrows
                      , ParallelListComp
                      , TransformListComp
                      , MonadComprehensions
                      , OverloadedRecordDot
                      , DuplicateRecordFields
                      , RecordWildCards
                      , BlockArguments
                      , PatternSynonyms
                      , OrPatterns
                      , LexicalNegation
                      , MultiWayIf
                      , OverloadedStrings
                      , OverloadedLists
                      , MultilineStrings
                      , NumDecimals
                      , PackageImports
                      , UnboxedTuples
                      , UnliftedNewtypes
                      , UnliftedDatatypes
                      , LinearTypes
                      , FunctionalDependencies
