cabal-version:      3.0
name:               hs-playground
version:            0.1.0.0
synopsis:           Playground with unusual settings and experimental features
-- description:
license:            MIT
license-file:       LICENSE
author:             Alejandro Domínguez
maintainer:         adomu4@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hs-playground
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   app
    default-language: GHC2024
